# Text-To-SQL

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  config.py  pyproject.toml  requirements-provider.txt  requirements-web.txt  requirements.txt  test_sql_generation.py
docs/: ARCHITECTURE.md  ENV_SETUP.md  HUGGINGFACE_AUTH.md  PROJECT_SUMMARY.md  PROVIDER_GUIDE.md  ROADMAP.md  SETUP.md  STREAMING_GUIDE.md  TESTING.md
examples/: basic_usage.py  streaming_example.py
scripts/: unzip_certs.sh
src/: main.py
src/database/: db_connector.py
src/interfaces/: language_model.py
src/models/: bedrock_model.py  genai_model.py  huggingface_model.py  model_factory.py
src/prompts/: text_to_sql_prompt.py
src/services/: text_to_sql_service.py
src/utils/: sql_parser.py
tests/: test_config.py  test_database.py  test_model.py  test_prompt.py  test_service.py  test_sql_parser.py
tools/: list_databases.py  quick_test.py  test_connection.py  test_generation.py
web/: README.md
web/backend/: main.py
web/frontend/: package-lock.json  package.json
web/frontend/public/: index.html
web/frontend/src/: App.js
